# fast-api-backend-template

./: .dockerignore  .env.example  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
infra/: Dockerfile  docker-compose.yml
infra/monitoring/: loki-config.yaml  prometheus.yml
