[project]
name = "fast-api-backend-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashish Thapa",email = "aacict@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
