[tool.poetry]
name = "fast-api-backend-template"
version = "0.1.0"
description = ""
authors = ["Ashish Thapa <aacict@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
python-json-logger = "^4.0.0"
prometheus-fastapi-instrumentator = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
